[package]
name = "hasetsu"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/hasetsu/cli"
repository = "https://github.com/hasetsu/cli"
description = "CLI application made for Hasetsu"
authors = ["Yuri Katsuki <katsuki.moe>"]
keywords = ["anime", "hasetsu"]
readme = "readme.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
